--- a/examples/index.html
+++ b/examples/index.html
@@ -19,7 +19,26 @@
       <div class="vswiper__track">
         <div class="vswiper__list">
           <!-- Slides -->
-          <!-- <div class="vswiper-slide"><span>Slide 1</span></div> -->
+          <div class="vswiper-slide" data-key="0"><span>Slide 1</span></div>
+          <div class="vswiper-slide" data-key="1"><span>Slide 2</span></div>
+        </div>
+      </div>
+      <!-- If we need pagination -->
+      <div class="vswiper-pagination"></div>
+
+      <!-- If we need navigation buttons -->
+      <div class="vswiper-button-prev"></div>
+      <div class="vswiper-button-next"></div>
+    </div>
+
+    <!-- Slider main container -->
+    <div class="vswiper-container image-swiper">
+      <!-- Additional required wrapper -->
+      <div class="vswiper__track">
+        <div class="vswiper__list">
+          <!-- Slides -->
+          <div class="vswiper-slide" data-key="0"><span>Slide 1</span></div>
+          <div class="vswiper-slide" data-key="1"><span>Slide 2</span></div>
         </div>
       </div>
       <!-- If we need pagination -->
