chore(rename) Change name to virchual

--- a/examples/index.html
+++ b/examples/index.html
@@ -14,35 +14,35 @@
   </head>
   <body>
     <!-- Slider main container -->
-    <div class="vswiper-container image-swiper">
+    <div class="virchual-container image-swiper">
       <!-- Additional required wrapper -->
-      <div class="vswiper__track">
-        <div class="vswiper__list">
+      <div class="virchual__track">
+        <div class="virchual__list">
           <!-- Slides -->
-          <div class="vswiper-slide" data-key="0"><span>Slide 1</span></div>
-          <div class="vswiper-slide" data-key="1"><span>Slide 2</span></div>
+          <div class="virchual-slide" data-key="0"><span>Slide 1</span></div>
+          <div class="virchual-slide" data-key="1"><span>Slide 2</span></div>
         </div>
       </div>
 
       <!-- If we need navigation buttons -->
-      <div class="vswiper-button-prev"></div>
-      <div class="vswiper-button-next"></div>
+      <div class="virchual-button-prev"></div>
+      <div class="virchual-button-next"></div>
     </div>
 
     <!-- Slider main container -->
-    <div class="vswiper-container image-swiper">
+    <div class="virchual-container image-swiper">
       <!-- Additional required wrapper -->
-      <div class="vswiper__track">
-        <div class="vswiper__list">
+      <div class="virchual__track">
+        <div class="virchual__list">
           <!-- Slides -->
-          <div class="vswiper-slide" data-key="0"><span>Slide 1</span></div>
-          <div class="vswiper-slide" data-key="1"><span>Slide 2</span></div>
+          <div class="virchual-slide" data-key="0"><span>Slide 1</span></div>
+          <div class="virchual-slide" data-key="1"><span>Slide 2</span></div>
         </div>
       </div>
 
       <!-- If we need navigation buttons -->
-      <div class="vswiper-button-prev"></div>
-      <div class="vswiper-button-next"></div>
+      <div class="virchual-button-prev"></div>
+      <div class="virchual-button-next"></div>
     </div>
 
     <script src="index.bundle.js"></script>
