add tests, implement myself

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,29 +16,7 @@
     <!-- Slider main container -->
     <div class="virchual-container image-swiper">
       <!-- Additional required wrapper -->
-      <div class="virchual__track">
-        <div class="virchual__list">
-          <!-- Slides -->
-          <div class="virchual-slide" data-key="0"><span>Slide 1</span></div>
-          <div class="virchual-slide" data-key="1"><span>Slide 2</span></div>
-        </div>
-      </div>
-
-      <!-- If we need navigation buttons -->
-      <div class="virchual-button-prev"></div>
-      <div class="virchual-button-next"></div>
-    </div>
-
-    <!-- Slider main container -->
-    <div class="virchual-container image-swiper">
-      <!-- Additional required wrapper -->
-      <div class="virchual__track">
-        <div class="virchual__list">
-          <!-- Slides -->
-          <div class="virchual-slide" data-key="0"><span>Slide 1</span></div>
-          <div class="virchual-slide" data-key="1"><span>Slide 2</span></div>
-        </div>
-      </div>
+      <div class="virchual__frame" style="height: 100%;"></div>
 
       <!-- If we need navigation buttons -->
       <div class="virchual-button-prev"></div>
