--- a/examples/index.html
+++ b/examples/index.html
@@ -23,6 +23,15 @@
       <div class="virchual-button-next"></div>
     </div>
 
+    <div class="virchual-container image-swiper">
+      <!-- Additional required wrapper -->
+      <div class="virchual__frame" style="height: 100%;"></div>
+
+      <!-- If we need navigation buttons -->
+      <div class="virchual-button-prev"></div>
+      <div class="virchual-button-next"></div>
+    </div>
+
     <script src="index.bundle.js"></script>
   </body>
 </html>
