--- a/examples/index.html
+++ b/examples/index.html
@@ -10,18 +10,25 @@
         margin: 0 auto;
         margin-top: 50px;
       }
+
+      .image-slide {
+        height: 100%;
+        display: block;
+      }
     </style>
   </head>
   <body>
     <!-- Slider main container -->
-    <div class="virchual-container image-swiper">
-      <!-- Additional required wrapper -->
-      <div class="virchual__frame" style="height: 100%;"></div>
+    <a class="image-slide" href="https://www.google.com" target="_blank">
+      <div class="virchual-container image-swiper">
+        <!-- Additional required wrapper -->
+        <div class="virchual__frame" style="height: 100%;"></div>
 
-      <!-- If we need navigation buttons -->
-      <div class="virchual-button-prev"></div>
-      <div class="virchual-button-next"></div>
-    </div>
+        <!-- If we need navigation buttons -->
+        <div class="virchual-button-prev"></div>
+        <div class="virchual-button-next"></div>
+      </div>
+    </a>
 
     <div class="virchual-container image-swiper">
       <!-- Additional required wrapper -->
