--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="dist/index.bundle.css" />
     <style>
       .image-swiper {
         border: 1px solid #ccc;
@@ -19,9 +19,9 @@
     </style>
   </head>
   <body>
-    <div class="virchual-container image-swiper">
+    <div class="virchual image-swiper">
       <!-- Additional required wrapper -->
-      <div class="virchual__frame" style="height: 100%;">
+      <div class="virchual__frame" style="height: 100%">
         <div class="virchual__slide">
           <picture
             ><source
@@ -47,7 +47,7 @@
           role="presentation"
           aria-hidden="true"
           focusable="false"
-          style="height: 20px; width: 20px; display: block; fill: currentcolor;"
+          style="height: 20px; width: 20px; display: block; fill: currentcolor"
         >
           <path
             d="m10.8 16c-.4 0-.7-.1-.9-.4l-6.8-6.7c-.5-.5-.5-1.3 0-1.8l6.8-6.7c.5-.5 1.2-.5 1.7 0s .5 1.2 0 1.7l-5.8 5.9 5.8 5.9c.5.5.5 1.2 0 1.7-.2.3-.5.4-.8.4"
@@ -61,7 +61,7 @@
           role="presentation"
           aria-hidden="true"
           focusable="false"
-          style="height: 20px; width: 20px; display: block; fill: currentcolor;"
+          style="height: 20px; width: 20px; display: block; fill: currentcolor"
         >
           <path
             d="m5.3 16c .3 0 .6-.1.8-.4l6.8-6.7c.5-.5.5-1.3 0-1.8l-6.8-6.7c-.5-.5-1.2-.5-1.7 0s-.5 1.2 0 1.7l5.8 5.9-5.8 5.9c-.5.5-.5 1.2 0 1.7.2.3.5.4.9.4"
@@ -70,6 +70,6 @@
       </button>
     </div>
 
-    <script src="index.bundle.js"></script>
+    <script src="dist/index.bundle.js"></script>
   </body>
 </html>
