unmount, setup example

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="dist/index.bundle.css" />
+    <link rel="stylesheet" href="dist/index.css" />
     <style>
       .image-swiper {
         border: 1px solid #ccc;
@@ -70,6 +70,6 @@
       </button>
     </div>
 
-    <script src="dist/index.bundle.js"></script>
+    <script src="dist/index.js"></script>
   </body>
 </html>
