--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -23,7 +23,7 @@
       <!-- Additional required wrapper -->
       <div class="virchual__frame" style="height: 100%">
         <div class="virchual__slide">
-          <picture
+          <picture data-id="0"
             ><source
               type="image/webp"
               srcset="
