fix(slider): handle only 2 slides too

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -12,7 +12,7 @@
         margin-top: 50px;
       }
 
-      .image-swiper .virchual__frame {
+      .virchual__frame {
         border-radius: 4px;
       }
 
