fix(drag): allow vertical scoll, fix drag issues

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -4,15 +4,16 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="dist/index.css" />
     <style>
+      html {
+        height: 5000px;
+      }
+
       .image-swiper {
         background-color: #fff;
         height: 265px;
         width: 400px;
         margin: 0 auto;
         margin-top: 50px;
-      }
-
-      .virchual__frame {
         border-radius: 4px;
       }
 
