refactor: reduce code

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <button type="button" data-controls="prev" tabindex="-1" aria-controls="" class="virchual__control virchual__control--prev">
+      <button type="button" value="-1" tabindex="-1" aria-controls="" class="virchual__control virchual__control--prev">
         <svg
           viewBox="0 0 16 16"
           role="presentation"
@@ -50,7 +50,7 @@
         </svg>
       </button>
 
-      <button type="button" data-controls="next" tabindex="-1" aria-controls="" class="virchual__control virchual__control--next">
+      <button type="button" value="1" tabindex="-1" aria-controls="" class="virchual__control virchual__control--next">
         <svg
           viewBox="0 0 16 16"
           role="presentation"
