improve(preact): make it run

--- a/packages/preact/examples/basic/public/index.html
+++ b/packages/preact/examples/basic/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Virchual Preact Demo" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="/index.css" />
     <title>Virchual Preact Demo</title>
   </head>
