refactor(examples, build): move around files, clean unused files

--- a/examples/basic/public/index.html
+++ b/examples/basic/public/index.html
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="dist/index.css" />
-    <style>
-      html {
-        height: 5000px;
-      }
-
-      .image-swiper {
-        background-color: #fff;
-        height: 265px;
-        width: 400px;
-        margin: 0 auto;
-        margin-top: 50px;
-        border-radius: 4px;
-      }
-
-      .image-slide {
-        height: 100%;
-        display: block;
-      }
-    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Virchual - Basic Demo" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <title>Virchual - Basic Demo</title>
   </head>
   <body>
+    <script type="module" src="/dist/index.js"></script>
+
     <div class="virchual image-swiper">
       <div class="virchual__frame" style="height: 100%">
         <div class="virchual__slide">
@@ -64,7 +51,5 @@
         </svg>
       </button>
     </div>
-
-    <script src="dist/index.js"></script>
   </body>
 </html>
